# roladeck

./: .gitignore  LICENSE  README.md  dune-project  index.html  package-lock.json  package.json  roladeck.opam  vite.config.js
.github/workflows/: build.yml
frontend/: App.re  Components.re  Index.re  dune
frontend/api/: Api.re  Clipboard.re  dune
frontend/components/: AiSourcing.re  CandidateDetail.re  Home.re  HomeWidget.re  Login.re  PlaybookEditor.re  Pool.re  ScoreForm.re  Settings.re  Signup.re  SkillDetail.re  SkillsBrowser.re  dune
frontend/public/: playbook-template.md  style.css
lib/ai/: ai_sourcing.ml  anthropic_client.ml  classify.ml  company_research.ml  dune  openai_client.ml
lib/api/: dune  handlers.ml  router.ml
lib/auth/: auth.ml  dune
lib/codegen/: dune  gen_skills.ml  skill_emitter.ml  skill_parser.ml
lib/greenhouse/: dune  greenhouse_client.ml
lib/json/: dune  types_j.ml
lib/scoring/: dune  scoring.ml
lib/skills_data/: dune  skills_registry.ml
lib/sourcing/: dune  sourcing.ml
lib/storage/: dune  storage.ml
lib/sync/: dune  greenhouse_sync.ml
lib/types/: dune  types.ml
test/: dune  test_scoring.ml
