(library
 (name roladeck_skills_data)
 (modules skills_registry)
 (libraries roladeck_types))

; Regenerate skills_registry.ml manually after updating SKILL.md files:
;   dune exec lib/codegen/gen_skills.exe -- \
;     --skills-dir open-recruit-skills-src/skills \
;     --output lib/skills_data/skills_registry.ml
